# advisor-research-navigator

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  END_TO_END_TEST.md  QUICKSTART.md  README.md  analyze_output.py  pyproject.toml  run_pipeline.py  temp_oa.json  temp_replace.py  test_output.md  测试指令.md
.cache/: arxiv_papers.json  gs_enriched.json  gs_papers.json  merged.json  oa_targeted_search.py  openalex_title_search.py
.claude/: settings.json
.desloppify/: plan.json  progression.jsonl  query.json  state-python.json  state-python.json.bak
cache/: arxiv_pengju.json
config/: sources.json
docs/: phase1运行策略.md  phase2-4_skill化设计草案.md  上下文交接.md  付费方案备忘_规模化扩展.md  测试指令.md  计划书.md  调研_AI编程效率工具.md  调研_GS数据获取方案多角度评估.md  阶段1重构计划.md
quality-workbench/: 00_材料导读.md  01_基础画像.md  02_领域地图.md  03_论文路线.md  04_学习向导.md  README.md  信息检索与筛查.md  学习与认知原则.md
scripts/: arxiv_preprints.py  discipline_classifier.py  gs_scraper.py  identity_resolver.py  oa_enrich.py  openalex_works.py  paper_merger.py  paper_utils.py  s2_enrich.py  test_phase1.py
scripts_tmp/: parse_homepage.py
src/: arxiv_preprints.py  cache_manager.py  gs_browser.py  gs_lite.py  gs_scraper.py  identity_resolver.py  paper_merger.py  s2_enrich.py
tests/: test_phase1_harness.py  test_phase_docs_verifier.py  test_project_entrypoints.py  test_source_metadata_verifier.py
历史/: 调研_AI编程业内做法_v1.md  转接文档.md
存档/: CLAUDE.md设计全面调研_2026-06-23.md  信息整理方法指导.md  工具设计.md  技术方案概述.md
张鹏举学习/: AGENTS.md  README.md
计划/: 上下文交接.md  信息收集方法指导.md  技术方案概述.md  旧版_老师画像_从信息卡目录.md  计划书.md  调研_学者分析工具全景.md  调研_阶段1工具选型.md  调研报告.md  (+2 more)
(+342 files in other folders)
