[project]
name = "pilot-test-phase1"
version = "0.1.0"
description = "Phase 1 of academic advisor profile research tool"
requires-python = ">=3.10"
dependencies = [
    # GS data source
    "scholarly>=1.7.11",
    # HTML parsing fallback
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    # No external test framework; tests use plain assertions
]

[project.scripts]
phase1-test = "phase1.tests.run_all:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"phase1" = ["*.md"]